<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.springframework.security.openid.connect</groupId>
  <artifactId>openid-connect-parent</artifactId>
  <packaging>pom</packaging>
  <version>${version.oss.openid.connect}</version>
  <name>OpenID Connect Provider</name>
  <description>OpenID Connect Login provider for Spring Security</description>

  <scm>
    <connection>https://github.com/rbieniek/spring-security-openid-connect</connection>
  </scm>

  <developers>  
    <developer>
      <id>rainer</id>
      <name>Rainer Bieniek</name>
      <email>Rainer.Bieniek@web.de</email>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone/>
    </developer>
  </developers>
  
  <build>
    <defaultGoal>install</defaultGoal>
    <pluginManagement>
      <plugins>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-compiler-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_compiler_plugin}</version>
    	</plugin>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-jar-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_jar_plugin}</version>
    	</plugin>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-surefire-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_surefire_plugin}</version>
          <configuration>
            <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
          </configuration>
    	</plugin>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-eclipse-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_eclipse_plugin}</version>
    	</plugin>
      </plugins>
    </pluginManagement>

    <plugins>    
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
    	  <source>1.7</source>
    	  <target>1.7</target>
	  <debug>true</debug>
	  <debuglevel>vars,lines,source</debuglevel>
    	</configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.9</version>
        <configuration>
          <downloadSources>true</downloadSources>
          <downloadJavadocs>false</downloadJavadocs>
        </configuration>
      </plugin> 
    </plugins>
  </build>

  <properties>
    <version.oss.openid.connect>0.2-SNAPSHOT</version.oss.openid.connect>

    <version.org.apache.maven.plugins.maven_compiler_plugin>3.1</version.org.apache.maven.plugins.maven_compiler_plugin>
    <version.org.apache.maven.plugins.maven_eclipse_plugin>2.9</version.org.apache.maven.plugins.maven_eclipse_plugin>
    <version.org.apache.maven.plugins.maven_jar_plugin>2.4</version.org.apache.maven.plugins.maven_jar_plugin>
    <version.org.apache.maven.plugins.maven_surefire_plugin>2.16</version.org.apache.maven.plugins.maven_surefire_plugin>

    <version.javax.jee>7.0</version.javax.jee>
    <version.org.slf4j>1.7.5</version.org.slf4j>
    <version.com.fasterxml.jackson>2.3.1</version.com.fasterxml.jackson>

    <version.org.apache.httpcomponents.core>4.3.2</version.org.apache.httpcomponents.core>
    <version.org.apache.httpcomponents.client>4.3.3</version.org.apache.httpcomponents.client>

    <version.org.springframework>4.0.5.RELEASE</version.org.springframework>
    <version.org.springframework.security>3.2.4.RELEASE</version.org.springframework.security>

    <version.junit.junit>4.11</version.junit.junit>
    <version.org.mockito>1.9.5</version.org.mockito>
  </properties>

  <modules>
    <module>spring-security-openid-connect</module>
  </modules>

  <repositories>
    <repository>
      <id>springsource-repository-libs-release</id>
      <name>Spring project snapshots, milestones, and releases</name>
      <url>http://repo.spring.io/libs-release</url>
      <snapshots>
	<enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>slf4j-api</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>slf4j-ext</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>slf4j-simple</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>jcl-over-slf4j</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>log4j-over-slf4j</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>slf4j-jdk14</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>slf4j-log4j12</artifactId>
	<version>${version.org.slf4j}</version>
	<exclusions>
          <exclusion>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
          </exclusion>
	</exclusions>   
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>jul-to-slf4j</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>

      <dependency>
	<groupId>javax</groupId>
	<artifactId>javaee-api</artifactId>
	<version>${version.javax.jee}</version>
      </dependency>

      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-framework-bom</artifactId>
        <version>${version.org.springframework}</version>
        <type>pom</type>
        <scope>import</scope>
	<exclusions>
          <exclusion>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
          </exclusion>
	</exclusions>   
      </dependency>
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-web</artifactId>
        <version>${version.org.springframework.security}</version>
	<exclusions>
          <exclusion>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
          </exclusion>
      </exclusions>
      </dependency>
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-config</artifactId>
        <version>${version.org.springframework.security}</version>
	<exclusions>
          <exclusion>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
          </exclusion>
	</exclusions>
      </dependency>
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-web</artifactId>
        <version>${version.org.springframework.security}</version>
	<exclusions>
          <exclusion>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
          </exclusion>
	</exclusions>
      </dependency>

      <dependency>
	<groupId>com.fasterxml.jackson.core</groupId>
	<artifactId>jackson-core</artifactId>
        <version>${version.com.fasterxml.jackson}</version>
      </dependency>

      <dependency>
	<groupId>org.apache.httpcomponents</groupId>
	<artifactId>httpcore</artifactId>
        <version>${version.org.apache.httpcomponents.core}</version>
      </dependency>
      <dependency>
	<groupId>org.apache.httpcomponents</groupId>
	<artifactId>httpclient</artifactId>
        <version>${version.org.apache.httpcomponents.client}</version>
      </dependency>

      <dependency> 
	<groupId>junit</groupId> 
	<artifactId>junit</artifactId> 
	<version>${version.junit.junit}</version> 
	<scope>test</scope>
      </dependency> 
      <dependency>
	<groupId>org.mockito</groupId>
	<artifactId>mockito-all</artifactId>
	<version>${version.org.mockito}</version>
	<scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

</project>
